--- a/Projekat/nutrition-adviser/src/main/resources/application.properties
+++ b/Projekat/nutrition-adviser/src/main/resources/application.properties
@@ -1,5 +1,21 @@
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/sbzn?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sbnz?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.datasource.dbcp.test-while-idle = true
+spring.datasource.dbcp.validation-query = SELECT 1
+spring.datasource.initialization-mode=always
+
+spring.jpa.show-sql = true
+
+#kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi
+#sa radom dropuje ih
+spring.jpa.hibernate.ddl-auto = create-drop
+
+#bira najbolje konvencije imenovanja za tabele i polja u bazi
+spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+#optimizacija za mysql upite
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
