--- a/Projekat/nutrition-adviser/src/main/resources/application.properties
+++ b/Projekat/nutrition-adviser/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/sbnz?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
