--- a/Projekat/nutrition-adviser/pom.xml
+++ b/Projekat/nutrition-adviser/pom.xml
@@ -37,7 +37,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -62,14 +62,29 @@
 			<version>7.37.0.Final</version>
 		</dependency>
 
-<!-- 
 		<dependency>
-			<groupId>sbnz.projekat</groupId>
-			<artifactId>nutrition-adviser-drools</artifactId>
-			<type>jar</type>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.4.1</version>
+			<scope>test</scope>
 		</dependency>
- -->
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+
+		<!-- <dependency> <groupId>sbnz.projekat</groupId> <artifactId>nutrition-adviser-drools</artifactId> 
+			<type>jar</type> <version>0.0.1-SNAPSHOT</version> </dependency> -->
 	</dependencies>
 
 	<build>
