--- a/Projekat/nutrition-adviser/src/main/resources/application.properties
+++ b/Projekat/nutrition-adviser/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+resonerDirPath=../nutrition-adviser-drools/src/main/resources/sbnz.projekat
+resonerPomPath=../nutrition-adviser-drools/pom.xml
