--- a/Projekat/frontend/package.json
+++ b/Projekat/frontend/package.json
@@ -13,7 +13,8 @@
     "underscore": "^1.10.2",
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-router": "^3.1.6",
-    "vue-server-renderer": "^2.6.12"
+    "vue-server-renderer": "^2.6.12",
+    "vue-simple-alert": "^1.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
